--- a/index.html
+++ b/index.html
@@ -102,6 +102,15 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-lg-3">
+                    <div class="card text-center" style="width: 18rem;">
+                        <img src="5607.jpg" class="card-img-top mx-auto" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title"> Ran</card-title></h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, voluptate!</p>
+                        </div>
+                    </div>
+                </div>
             
             </div>
         </div>
