--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="col-lg-12">
                     <h1>Lorem ipsum dolor sit amet.</h1>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium, quis?</p>
-                    <a href="" class="btn btn-brand"> Ran</a>
+                    <a href="" class="btn btn-brand"> Select</a>
 
                 </div>
             </div>
@@ -68,41 +68,41 @@
     </div>
 
 
-    <!-- bag o -->
+    <!-- Home -->
     <section id=" Rannille">
         <div class="container text-center">
-            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3>
+            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
             <div class="row">
-                <div class="col-lg-3">
+                <div class="col-lg-3 d-flex justify-content-center align-items-center">
                     <div class="card text-center" style="width: 18rem;">
-                        <img src="5607.jpg" class="card-img-top mx-auto" alt="...">
+                        <img src="image.png" class="card-img-top mx-auto" alt="...">
                         <div class="card-body">
                             <h5 class="card-title"> Ran</card-title></h5>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, voluptate!</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 d-flex justify-content-center align-items-center">
                     <div class="card text-center" style="width: 18rem;">
-                        <img src="5607.jpg" class="card-img-top mx-auto" alt="...">
+                        <img src="image.png" class="card-img-top mx-auto" alt="...">
                         <div class="card-body">
                             <h5 class="card-title"> Ran</card-title></h5>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, voluptate!</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 d-flex justify-content-center align-items-center">
                     <div class="card text-center" style="width: 18rem;">
-                        <img src="5607.jpg" class="card-img-top mx-auto" alt="...">
+                        <img src="image.png" class="card-img-top mx-auto" alt="...">
                         <div class="card-body">
                             <h5 class="card-title"> Ran</card-title></h5>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, voluptate!</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 d-flex justify-content-center align-items-center">
                     <div class="card text-center" style="width: 18rem;">
-                        <img src="5607.jpg" class="card-img-top mx-auto" alt="...">
+                        <img src="image.png" class="card-img-top mx-auto" alt="...">
                         <div class="card-body">
                             <h5 class="card-title"> Ran</card-title></h5>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, voluptate!</p>
@@ -126,7 +126,7 @@
                         <h4>ABOUT</h4>
                         <h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione soluta fugit repellendus?</h2>
                         <p>
-                            <a href="" class="btn btn-brand"> Ran</a>
+                            <a href="" class="btn btn-brand"> Button</a>
 
                 </div>
 
@@ -285,6 +285,49 @@
         </div>
 
     </section>
+
+
+<!-- footer -->
+
+<footer class="footer text-white" id="footer">
+    <div class="container">
+        <div class="row al">
+            <div class="col-md-3 col-ms-6 text-lg-start text-center">
+               <a class="navbar-brand" href="#">
+                <img src="1.png" alt="logo" height="60px">
+               </a>
+                <h5 class="mt-4">About Us</h5>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa eius facere beatae, cum dolorum obcaecati.</p>
+            </div>
+                <div class="col-md-3 col-ms-6 text-lg-start ps-lg-5 ps-0 text-center">
+                    <h5>Services</h5>
+                    <ul>
+                        <li><a href="#">Service 1</a></li>
+                        <li><a href="#">Service 2</a></li>
+                        <li><a href="#">Service 3</a></li>
+                        <li><a href="#">Service 4</a></li>
+                        <li><a href="#">Service 5</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3 col-ms-6 text-lg-start text-center">
+                    <h5>Contact Us</h5>
+                    <p> Coloso St,<br>Kabankalan, Philippines</p>
+                    <p>Email: Rannillepava123.com <br>Phone: +63 9123456789</p>
+                </div>
+                <div class="col-md-3 col-ms-6 text-lg-start text-center">
+                    <h5>Newsletter</h5>
+                    <form>
+                        <div class="input-group mb-3">
+                            <input type="text" class="form-control" style="border-radius: 1px;" placeholder="Email" aria-label="Email" aria-describedby="button-addon2">
+                            <button class="btn btn-outline-light" type="button" id="button-addon2">Subscribe</button>
+                        </div>
+                    </form>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                </div>
+        </div>
+        
+    </div>
+</footer>
 
 </body>
 
